Created Convolutional Neural Network Model

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNLbmYNd0vz0gyCVoLsgf+r",
+      "authorship_tag": "ABX9TyNfjrIN319Z2a0+1NzWKzZ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "O-rLpoSiZRsW"
       },
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "sUK12HmBZ-Iv"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -69,10 +69,25 @@
         "train_data = datasets.MNIST(root='/cnn_data', train=True, download=True, transform=transform)"
       ],
       "metadata": {
-        "id": "uNP7JeSVajmM"
+        "id": "uNP7JeSVajmM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a43fce5-959d-4acd-8f8f-797abc0c49f0"
       },
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.09MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 57.6kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:06<00:00, 244kB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 5.81MB/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -83,7 +98,7 @@
       "metadata": {
         "id": "_FNMDG6wbCRW"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -96,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9_92qu91bVn-",
-        "outputId": "d39e1563-d60b-4bce-d983-11549f8df8bd"
+        "outputId": "330e2605-d11e-4897-de54-ff2dd9e76fc9"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +128,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -127,9 +142,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hz7RrehSbY1i",
-        "outputId": "fb0a1149-d4d4-4f34-b3e9-b10048e61cd7"
+        "outputId": "0460e130-25ee-4408-9db8-d6a5fa3b3a89"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -156,7 +171,7 @@
       "metadata": {
         "id": "V8S4t-5QbfeY"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -167,7 +182,7 @@
       "metadata": {
         "id": "QmYcCBjPbiKQ"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -178,7 +193,7 @@
       "metadata": {
         "id": "50LF4vwBbj2h"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -189,7 +204,7 @@
       "metadata": {
         "id": "eSLFzfM-brKE"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -200,7 +215,7 @@
       "metadata": {
         "id": "bmjFMz3Xbszn"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -211,7 +226,7 @@
       "metadata": {
         "id": "yOcLGTEBbt68"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -222,7 +237,7 @@
       "metadata": {
         "id": "fC3fyfe1b0oK"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -233,7 +248,7 @@
       "metadata": {
         "id": "IrCMX2s5b1gl"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -244,7 +259,7 @@
       "metadata": {
         "id": "IZUX6WTMb7jk"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -255,7 +270,7 @@
       "metadata": {
         "id": "A_V30msqcEMy"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -268,7 +283,7 @@
       "metadata": {
         "id": "hdH7IrGHcFb9"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -282,7 +297,7 @@
       "metadata": {
         "id": "_X8csIPrdSz7"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -295,7 +310,7 @@
       "metadata": {
         "id": "QGeJ6ik9d_cc"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -308,9 +323,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qnnnRkhqeLuE",
-        "outputId": "59cdfd93-a3b6-4035-c049-8c98b294ba4b"
+        "outputId": "ad335874-7e5b-412c-ccc2-088660622deb"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +335,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 21
         }
       ]
     },
@@ -332,7 +347,7 @@
       "metadata": {
         "id": "E1c9vlzRePFZ"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -344,7 +359,7 @@
       "metadata": {
         "id": "SijM7oh7edUw"
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -358,9 +373,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lonf6vQ1e0fy",
-        "outputId": "2e63100c-be3a-41c9-b7b6-db827f54775a"
+        "outputId": "a9374e46-e23b-44e1-e4df-ba0f79d69322"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +385,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
@@ -383,7 +398,7 @@
       "metadata": {
         "id": "mCj-RCZ3e4P8"
       },
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -396,9 +411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x6Jei1_Qf6IF",
-        "outputId": "12ac0f54-24af-4fd8-8af1-6162ee7e15a3"
+        "outputId": "b248389b-6b9a-4795-a49e-970bbc2add38"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +423,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 26
         }
       ]
     },
@@ -421,7 +436,7 @@
       "metadata": {
         "id": "CXZXoMQvf9WG"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -434,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kihCfAeEgT1p",
-        "outputId": "3dbae18b-53af-4bb2-d957-ceac7ccab713"
+        "outputId": "12b74012-a14f-4536-f2af-2f252b641451"
       },
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 28
         }
       ]
     },
@@ -459,7 +474,7 @@
       "metadata": {
         "id": "QSfGl_NfgVNu"
       },
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -468,13 +483,13 @@
         "x.shape"
       ],
       "metadata": {
+        "id": "I2URfJvHgiou",
+        "outputId": "e0edbcc0-3e80-4d47-ee0e-1cc68092746d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "I2URfJvHgiou",
-        "outputId": "041e980d-8139-4dd8-a43a-8d2c1a8bbb42"
+        }
       },
-      "execution_count": 29,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,15 +499,100 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 30
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Model Class\n",
+        "class ConvolutionalNetwork(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.conv1 = nn.Conv2d(in_channels=1, out_channels=6, kernel_size=3, stride=1)\n",
+        "    self.conv2 = nn.Conv2d(in_channels=6, out_channels=16, kernel_size=3, stride=1)\n",
+        "    # Fully Connected Layer\n",
+        "    self.fc1 = nn.Linear(in_features=5*5*16, out_features=120)\n",
+        "    self.fc2 = nn.Linear(in_features=120, out_features=84)\n",
+        "    self.out = nn.Linear(in_features=84, out_features=10)\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # First Convolutional Layer\n",
+        "    X = F.relu(self.conv1(X))\n",
+        "    X = F.max_pool2d(X, kernel_size=2, stride=2) # 2*2 kernal and stride 2\n",
+        "    # Second Pass\n",
+        "    X = F.relu(self.conv2(X))\n",
+        "    X = F.max_pool2d(X, kernel_size=2, stride=2)\n",
+        "    # Re-View to Flatten it out\n",
+        "    X = X.view(-1, 16*5*5) # negative one so that we can vary the batch size\n",
+        "\n",
+        "    # Fully Connected Layers\n",
+        "    X = F.relu(self.fc1(X))\n",
+        "    X = F.relu(self.fc2(X))\n",
+        "    X = self.fc3(X)\n",
+        "\n",
+        "    return F.log_softmax(X, dim=1)"
+      ],
       "metadata": {
         "id": "ef6bAMRZglEu"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an Instance of our Model\n",
+        "torch.manual_seed(41)\n",
+        "model = ConvolutionalNetwork()\n",
+        "model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UcWRWvSa7p1s",
+        "outputId": "4d40012b-dc65-43b1-af24-ab3bad92f6cc"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ConvolutionalNetwork(\n",
+              "  (conv1): Conv2d(1, 6, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (conv2): Conv2d(6, 16, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (fc1): Linear(in_features=400, out_features=120, bias=True)\n",
+              "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
+              "  (out): Linear(in_features=84, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Loss Function Optimizer\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) # Smaller the Learning Rate, Longer its gonna take to train."
+      ],
+      "metadata": {
+        "id": "_yKNYAc58BN1"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xiXrfl6d8h2H"
       },
       "execution_count": null,
       "outputs": []
