Train and Test CNN Model

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNfjrIN319Z2a0+1NzWKzZ+",
+      "authorship_tag": "ABX9TyNGOwzVFnPYtiNPZs8FVjDd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "O-rLpoSiZRsW"
       },
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "sUK12HmBZ-Iv"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -69,25 +69,10 @@
         "train_data = datasets.MNIST(root='/cnn_data', train=True, download=True, transform=transform)"
       ],
       "metadata": {
-        "id": "uNP7JeSVajmM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9a43fce5-959d-4acd-8f8f-797abc0c49f0"
+        "id": "uNP7JeSVajmM"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 9.91M/9.91M [00:01<00:00, 5.09MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 57.6kB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:06<00:00, 244kB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 5.81MB/s]\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -98,7 +83,7 @@
       "metadata": {
         "id": "_FNMDG6wbCRW"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -111,9 +96,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9_92qu91bVn-",
-        "outputId": "330e2605-d11e-4897-de54-ff2dd9e76fc9"
+        "outputId": "6a07fa1a-7666-4cf6-d438-baa19fcd5506"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +113,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -142,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hz7RrehSbY1i",
-        "outputId": "0460e130-25ee-4408-9db8-d6a5fa3b3a89"
+        "outputId": "a77b5553-c7f1-42b0-f9b5-f9077fd568b4"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +144,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -171,7 +156,7 @@
       "metadata": {
         "id": "V8S4t-5QbfeY"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -182,7 +167,7 @@
       "metadata": {
         "id": "QmYcCBjPbiKQ"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -193,7 +178,7 @@
       "metadata": {
         "id": "50LF4vwBbj2h"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -204,7 +189,7 @@
       "metadata": {
         "id": "eSLFzfM-brKE"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -215,7 +200,7 @@
       "metadata": {
         "id": "bmjFMz3Xbszn"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -226,7 +211,7 @@
       "metadata": {
         "id": "yOcLGTEBbt68"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -237,7 +222,7 @@
       "metadata": {
         "id": "fC3fyfe1b0oK"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -248,7 +233,7 @@
       "metadata": {
         "id": "IrCMX2s5b1gl"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -259,7 +244,7 @@
       "metadata": {
         "id": "IZUX6WTMb7jk"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -270,7 +255,7 @@
       "metadata": {
         "id": "A_V30msqcEMy"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -283,7 +268,7 @@
       "metadata": {
         "id": "hdH7IrGHcFb9"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -297,7 +282,7 @@
       "metadata": {
         "id": "_X8csIPrdSz7"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -310,7 +295,7 @@
       "metadata": {
         "id": "QGeJ6ik9d_cc"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -323,9 +308,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qnnnRkhqeLuE",
-        "outputId": "ad335874-7e5b-412c-ccc2-088660622deb"
+        "outputId": "25606e93-6a27-48b9-d4c4-24cdb6e5ef53"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,7 +320,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 20
         }
       ]
     },
@@ -347,7 +332,7 @@
       "metadata": {
         "id": "E1c9vlzRePFZ"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -359,7 +344,7 @@
       "metadata": {
         "id": "SijM7oh7edUw"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -373,9 +358,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lonf6vQ1e0fy",
-        "outputId": "a9374e46-e23b-44e1-e4df-ba0f79d69322"
+        "outputId": "514ada8c-36de-42a0-9ebd-fc23dc18cb0b"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +370,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 23
         }
       ]
     },
@@ -398,7 +383,7 @@
       "metadata": {
         "id": "mCj-RCZ3e4P8"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -411,9 +396,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x6Jei1_Qf6IF",
-        "outputId": "b248389b-6b9a-4795-a49e-970bbc2add38"
+        "outputId": "d7a00275-1df0-4e6d-ca11-e3691185318c"
       },
-      "execution_count": 26,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +408,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 25
         }
       ]
     },
@@ -436,7 +421,7 @@
       "metadata": {
         "id": "CXZXoMQvf9WG"
       },
-      "execution_count": 27,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -449,9 +434,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kihCfAeEgT1p",
-        "outputId": "12b74012-a14f-4536-f2af-2f252b641451"
+        "outputId": "80dd7779-72e9-4298-892d-38c55ee45bce"
       },
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +446,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 27
         }
       ]
     },
@@ -474,7 +459,7 @@
       "metadata": {
         "id": "QSfGl_NfgVNu"
       },
-      "execution_count": 29,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -484,12 +469,12 @@
       ],
       "metadata": {
         "id": "I2URfJvHgiou",
-        "outputId": "e0edbcc0-3e80-4d47-ee0e-1cc68092746d",
+        "outputId": "d9665f17-7667-413c-8a6c-cb1d9ddf2e3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 29
         }
       ]
     },
@@ -515,7 +500,7 @@
         "    # Fully Connected Layer\n",
         "    self.fc1 = nn.Linear(in_features=5*5*16, out_features=120)\n",
         "    self.fc2 = nn.Linear(in_features=120, out_features=84)\n",
-        "    self.out = nn.Linear(in_features=84, out_features=10)\n",
+        "    self.fc3 = nn.Linear(in_features=84, out_features=10)\n",
         "\n",
         "  def forward(self, X):\n",
         "    # First Convolutional Layer\n",
@@ -537,7 +522,7 @@
       "metadata": {
         "id": "ef6bAMRZglEu"
       },
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -553,9 +538,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UcWRWvSa7p1s",
-        "outputId": "4d40012b-dc65-43b1-af24-ab3bad92f6cc"
+        "outputId": "ae4fd577-e0d2-4a2f-e4ef-045a5a0a2760"
       },
-      "execution_count": 33,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,12 +551,12 @@
               "  (conv2): Conv2d(6, 16, kernel_size=(3, 3), stride=(1, 1))\n",
               "  (fc1): Linear(in_features=400, out_features=120, bias=True)\n",
               "  (fc2): Linear(in_features=120, out_features=84, bias=True)\n",
-              "  (out): Linear(in_features=84, out_features=10, bias=True)\n",
+              "  (fc3): Linear(in_features=84, out_features=10, bias=True)\n",
               ")"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 31
         }
       ]
     },
@@ -585,16 +570,142 @@
       "metadata": {
         "id": "_yKNYAc58BN1"
       },
-      "execution_count": 34,
+      "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "start_time = time.time()\n",
+        "\n",
+        "# Create Variables to Tracks Things\n",
+        "epochs = 5\n",
+        "train_losses = []\n",
+        "test_losses = []\n",
+        "train_correct = []\n",
+        "test_correct = []\n",
+        "\n",
+        "# For Loop of Epochs\n",
+        "for i in range(epochs):\n",
+        "  trn_corr = 0\n",
+        "  tst_corr = 0\n",
+        "\n",
+        "  # Train\n",
+        "  for b, (X_train, y_train) in enumerate(train_loader):\n",
+        "    b += 1 # start our batches at 1\n",
+        "    y_pred = model(X_train) # get predicted values from the training set. Not flattened 2D\n",
+        "    loss = criterion(y_pred, y_train) # how off are we? Compare the predictions to correct answers in Y_train\n",
+        "\n",
+        "    predicted  = torch.max(y_pred.data,1)[1] # add up the number of correct predictions. Indexed off the first point\n",
+        "    batch_corr = (predicted == y_train).sum() # how many we got correct from this batch. True = 1, False = 0, sum those up\n",
+        "    trn_corr += batch_corr # keep track as we go along in training\n",
+        "\n",
+        "    # Update our Parameters\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "\n",
+        "    # Print out some Results\n",
+        "    if b%600 == 0:\n",
+        "      print(f'Epoch: {i} Batch: {b} Loss: {loss.item()}')\n",
+        "\n",
+        "  train_losses.append(loss)\n",
+        "  train_correct.append(trn_corr)\n",
+        "\n",
+        "  # Test\n",
+        "  with torch.no_grad(): # No gradient so we don't update our weights and biases with test data\n",
+        "    for b, (X_test, y_test) in enumerate(test_loader):\n",
+        "      y_val = model(X_test)\n",
+        "      predicted = torch.max(y_val.data, 1)[1] # Adding up correct predictions\n",
+        "      tst_corr += (predicted == y_test).sum() # T=1 F=0 and sum away\n",
+        "\n",
+        "    loss = criterion(y_val, y_test)\n",
+        "    test_losses.append(loss)\n",
+        "    test_correct.append(tst_corr)\n",
+        "\n",
+        "\n",
+        "\n",
+        "current_time = time.time()\n",
+        "total = current_time - start_time\n",
+        "print(f'Training Took: {total/60} minutes!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xiXrfl6d8h2H",
+        "outputId": "3be4cadb-8eea-4549-f76b-f0d8617d721b"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0 Batch: 600 Loss: 0.1623610556125641\n",
+            "Epoch: 0 Batch: 1200 Loss: 0.1502392590045929\n",
+            "Epoch: 0 Batch: 1800 Loss: 0.4744560718536377\n",
+            "Epoch: 0 Batch: 2400 Loss: 0.14238706231117249\n",
+            "Epoch: 0 Batch: 3000 Loss: 0.007758188061416149\n",
+            "Epoch: 0 Batch: 3600 Loss: 0.3836284875869751\n",
+            "Epoch: 0 Batch: 4200 Loss: 0.0038223876617848873\n",
+            "Epoch: 0 Batch: 4800 Loss: 0.0021286322735249996\n",
+            "Epoch: 0 Batch: 5400 Loss: 0.0569545142352581\n",
+            "Epoch: 0 Batch: 6000 Loss: 0.00038789428072050214\n",
+            "Epoch: 1 Batch: 600 Loss: 0.005851339548826218\n",
+            "Epoch: 1 Batch: 1200 Loss: 0.3855525553226471\n",
+            "Epoch: 1 Batch: 1800 Loss: 0.004819948226213455\n",
+            "Epoch: 1 Batch: 2400 Loss: 0.003216963727027178\n",
+            "Epoch: 1 Batch: 3000 Loss: 0.0332382395863533\n",
+            "Epoch: 1 Batch: 3600 Loss: 0.5372857451438904\n",
+            "Epoch: 1 Batch: 4200 Loss: 0.04561494290828705\n",
+            "Epoch: 1 Batch: 4800 Loss: 0.0007510822033509612\n",
+            "Epoch: 1 Batch: 5400 Loss: 0.0001173773780465126\n",
+            "Epoch: 1 Batch: 6000 Loss: 0.14201366901397705\n",
+            "Epoch: 2 Batch: 600 Loss: 0.023733172565698624\n",
+            "Epoch: 2 Batch: 1200 Loss: 0.003455493599176407\n",
+            "Epoch: 2 Batch: 1800 Loss: 0.0008372392621822655\n",
+            "Epoch: 2 Batch: 2400 Loss: 0.010705141350626945\n",
+            "Epoch: 2 Batch: 3000 Loss: 0.008078320883214474\n",
+            "Epoch: 2 Batch: 3600 Loss: 0.0011862406972795725\n",
+            "Epoch: 2 Batch: 4200 Loss: 0.038080841302871704\n",
+            "Epoch: 2 Batch: 4800 Loss: 0.0016068397089838982\n",
+            "Epoch: 2 Batch: 5400 Loss: 0.138673797249794\n",
+            "Epoch: 2 Batch: 6000 Loss: 0.2449204921722412\n",
+            "Epoch: 3 Batch: 600 Loss: 0.007151054684072733\n",
+            "Epoch: 3 Batch: 1200 Loss: 0.011097034439444542\n",
+            "Epoch: 3 Batch: 1800 Loss: 0.0017998721450567245\n",
+            "Epoch: 3 Batch: 2400 Loss: 0.0001049584461725317\n",
+            "Epoch: 3 Batch: 3000 Loss: 0.0031431831885129213\n",
+            "Epoch: 3 Batch: 3600 Loss: 0.003668801160529256\n",
+            "Epoch: 3 Batch: 4200 Loss: 0.0037249946035444736\n",
+            "Epoch: 3 Batch: 4800 Loss: 0.00015864608576521277\n",
+            "Epoch: 3 Batch: 5400 Loss: 0.0796482041478157\n",
+            "Epoch: 3 Batch: 6000 Loss: 0.0808732658624649\n",
+            "Epoch: 4 Batch: 600 Loss: 0.014099588617682457\n",
+            "Epoch: 4 Batch: 1200 Loss: 0.0382874570786953\n",
+            "Epoch: 4 Batch: 1800 Loss: 0.16302265226840973\n",
+            "Epoch: 4 Batch: 2400 Loss: 0.02186887338757515\n",
+            "Epoch: 4 Batch: 3000 Loss: 0.0024396399967372417\n",
+            "Epoch: 4 Batch: 3600 Loss: 0.0013979513896629214\n",
+            "Epoch: 4 Batch: 4200 Loss: 0.000989563181065023\n",
+            "Epoch: 4 Batch: 4800 Loss: 0.010317974723875523\n",
+            "Epoch: 4 Batch: 5400 Loss: 0.16506639122962952\n",
+            "Epoch: 4 Batch: 6000 Loss: 0.0027098222635686398\n",
+            "Training Took: 2.7274540305137633 minutes!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xiXrfl6d8h2H"
+        "id": "z40ncxxSBkAm"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     }
   ]
